test/conformance/kuttl/validate/clusterpolicy/standard/cel/disallow-host-port/02-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: pod-pass.yaml
  shouldFail: false
- file: pod-fail.yaml
  shouldFail: true
